# unchat-keeb

./: .gitignore  LICENSE  README.md
GKanwarKicad/GKanwarLibrary.pretty/: Choc_V1_LED_1.00u.kicad_mod  Choc_V1_LED_1.50u.kicad_mod  Choc_V1_LED_1.50u_90deg.kicad_mod  TSSOP-14_4.4x5mm_P0.65mm.kicad_mod  TSSOP-16_4.4x5mm_P0.65mm.kicad_mod
ScottoKicad/: LICENSE.md
ScottoKicad/footprints/ScottoKeebs_MCU.pretty/: Raspberry_Pi_Pico_SMD.kicad_mod
cad/: choc_v1.scad  layout.scad  pcb.dxf  pcb.scad  pico.scad  switches.dxf
cad_v2/: adafruit_qt_py.scad  bottom_plate.dxf  cherry.scad  layout.scad  pcb.dxf  pcb.scad  plate.dxf  rj45.scad  switches.dxf  top_plate.dxf
components/: rj45-2041126-1.stl  rj45-5406721.stl
firmware/: Cargo.toml  build.rs  flash.sh
firmware/.cargo/: config.toml
firmware/boards/: unchat-42.json
firmware/keymaps/: split-42-colemak.json  split-42.json
firmware/src/lib/: board.rs  bus.rs  error.rs  layout.rs  led_matrix.rs  mod.rs  switch_matrix.rs  usb.rs  vkeyboard.rs
firmware/src/lib/keymaps/: split-42.keymap
firmware_v2/: Cargo.toml  flash.sh
firmware_v2/.cargo/: config.toml
firmware_v2/boards/: unchat-40.json
firmware_v2/keymaps/: split-40-colemak-callum.json  split-40-colemak.json  split-42-colemak-callum.json
firmware_v2/src/lib/: basic.rs  board.rs  error.rs  layout.rs  mod.rs  switch_matrix.rs  usb.rs  vkeyboard.rs
timelapse/: make_gif.sh  squeeze_vid.sh
unchat_keeb/: bottom_plate.dxf  bottom_plate.scad  debounce.kicad_sch  fp-info-cache  fp-lib-table  led_control.kicad_sch  left_switches.kicad_sch  right_switches.kicad_sch  switches.kicad_sch  sym-lib-table  unchat_keeb.kicad_pcb  unchat_keeb.kicad_prl  unchat_keeb.kicad_pro  unchat_keeb.kicad_sch
unchat_keeb/production/Unchat_42-key_PCB_v0.1_2023-12-25/: bom.csv  designators.csv  netlist.ipc  positions.csv
unchat_keeb_v2/: led_control.kicad_sch  left_switches.kicad_sch  switch_bodies.kicad_sch  switches.kicad_sch  switches.kicad_sch-bak  unchat_keeb_v2.kicad_pcb  unchat_keeb_v2.kicad_prl  unchat_keeb_v2.kicad_pro  unchat_keeb_v2.kicad_sch
unchat_keeb_v2/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
(+3 files in other folders)
