[package]
name = "unchat_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
hal = { package = "embedded-hal", version = "0.2.*" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp-pico = "0.8"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde-json = { package = "serde-json-core", version = "0.5", features = [ "custom-error-messages"] }
heapless = { version = "0.8", features = [ "serde" ] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[lib]
name = "keeb"
path = "src/lib/mod.rs"

[[bin]]
name = "rp_pico"
test = false
bench = false

